# mtrsc

./: .gitignore  .gitmodules  CMakeLists.txt  input.json
include/: Component.h  hash.h  jsonUtils.h
include/res/: ResourcePack.h  ResourceType.h
include/scn/: Entity.h
include/struc/res/: Resource.h
include/struc/scn/: Component.h  Scene.h
include/structure/: Component.h  Entity.h  Scene.h
include/structures/: Component.h  Entity.h  Scene.h
include/util/: DynamicDataBuffer.h  hash.h  jsonUtils.h  string_optimizer.h  to_dynamic_data.h
include/utilities/: hash.h  jsonUtils.h
src/: Component.cpp  Entity.cpp  Scene.cpp  hash.cpp  jsonUtils.cpp  main.cpp
src/res/: Resource.cpp  ResourcePack.cpp  ResourceType.cpp  from_to_res.cpp
src/scn/: Component.cpp  Entity.cpp  Scene.cpp  from_to_comp.cpp
src/struc/res/: Resource.cpp  ResourcePack.cpp  ResourceType.cpp  from_to_res.cpp
src/struc/scn/: Component.cpp  Entity.cpp  Scene.cpp  from_to_comp.cpp
src/structure/: Component.cpp  Entity.cpp  Scene.cpp
src/structures/: Component.cpp  Entity.cpp  Scene.cpp
src/util/: hash.cpp  jsonUtils.cpp  string_optimizer.cpp  to_dynamic_data.cpp
src/utilities/: hash.cpp  jsonUtils.cpp
